infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-app-service
spec:
  selector:
    app: argo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
