infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-app-ingress
spec:
  rules:
    - host: argo-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-app-service
                port:
                  number: 80
